<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <GridLayout
        android:id="@+id/gridLayout"
        android:layout_width="323dp"
        android:layout_height="187dp"
        android:layout_marginBottom="16dp"
        android:alignmentMode="alignBounds"
        android:background="@drawable/repeat_grid_2"
        android:columnCount="4"
        android:columnOrderPreserved="false"

        android:paddingLeft="75dp"
        android:paddingTop="10dp"
        android:paddingBottom="0dp"
        app:layout_constraintBottom_toTopOf="@+id/btnMenos"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.533">

        <EditText
            android:id="@+id/txt1"
            android:layout_width="45dp"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_column="0"
            android:ems="10"
            android:enabled="false"
            android:inputType="numberDecimal|numberSigned"
            android:visibility="visible" />

        <EditText
            android:id="@+id/txt2"
            android:layout_width="45dp"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_column="1"
            android:ems="10"
            android:enabled="false"
            android:inputType="numberDecimal|numberSigned"
            android:visibility="visible" />

        <EditText
            android:id="@+id/txt3"
            android:layout_width="45dp"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_column="2"
            android:ems="10"
            android:enabled="false"
            android:inputType="numberDecimal|numberSigned"
            android:visibility="visible" />

        <EditText
            android:id="@+id/txt6"
            android:layout_width="45dp"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_column="0"
            android:ems="10"
            android:enabled="false"
            android:inputType="numberDecimal|numberSigned"
            android:visibility="visible" />

        <EditText
            android:id="@+id/txt7"
            android:layout_width="45dp"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_column="1"
            android:ems="10"
            android:enabled="false"
            android:inputType="numberDecimal|numberSigned"
            android:visibility="visible" />

        <EditText
            android:id="@+id/txt8"
            android:layout_width="45dp"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_column="2"
            android:ems="10"
            android:enabled="false"
            android:inputType="numberDecimal|numberSigned"
            android:visibility="visible" />

        <EditText
            android:id="@+id/txt11"
            android:layout_width="45dp"
            android:layout_height="wrap_content"
            android:layout_row="2"
            android:layout_column="0"
            android:ems="10"
            android:enabled="false"
            android:inputType="numberDecimal|numberSigned"
            android:visibility="visible" />

        <EditText
            android:id="@+id/txt12"
            android:layout_width="45dp"
            android:layout_height="wrap_content"
            android:layout_row="2"
            android:layout_column="1"
            android:ems="10"
            android:enabled="false"
            android:inputType="numberDecimal|numberSigned"
            android:visibility="visible" />

        <EditText
            android:id="@+id/txt13"
            android:layout_width="45dp"
            android:layout_height="wrap_content"
            android:layout_row="2"
            android:layout_column="2"
            android:ems="10"
            android:enabled="false"
            android:inputType="numberDecimal|numberSigned"
            android:visibility="visible" />

        <EditText
            android:id="@+id/txtA"
            android:layout_width="45dp"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_column="3"
            android:ems="10"
            android:enabled="false"
            android:inputType="numberDecimal|numberSigned"
            android:visibility="visible" />

        <EditText
            android:id="@+id/txtB"
            android:layout_width="45dp"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_column="3"
            android:ems="10"
            android:enabled="false"
            android:inputType="numberDecimal|numberSigned"
            android:visibility="visible" />

        <EditText
            android:id="@+id/txtC"
            android:layout_width="45dp"
            android:layout_height="wrap_content"
            android:layout_row="2"
            android:layout_column="3"
            android:ems="10"
            android:enabled="false"
            android:inputType="numberDecimal|numberSigned"
            android:visibility="visible" />

    </GridLayout>

    <Button
        android:id="@+id/btnDos"
        android:layout_width="300dp"
        android:layout_height="75dp"
        android:layout_marginBottom="228dp"
        android:background="@drawable/repeat_grid_1"
        android:fontFamily="sans-serif-light"
        android:text="@string/btnDos"
        android:textColor="@android:color/background_light"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.859" />

    <Button
        android:id="@+id/btnTres"
        android:layout_width="300dp"
        android:layout_height="75dp"
        android:layout_marginBottom="212dp"
        android:background="@drawable/repeat_grid_1"
        android:fontFamily="sans-serif-light"
        android:text="@string/btnTres"
        android:textColor="@android:color/background_light"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnDos"
        app:layout_constraintVertical_bias="0.0" />

    <Button

        android:id="@+id/btnUno"
        android:layout_width="220dp"
        android:layout_height="63dp"
        android:layout_marginBottom="84dp"
        android:background="@drawable/repeat_grid_1"
        android:fontFamily="sans-serif-light"
        android:shadowColor="#3C3F41"
        android:text="@string/btnUno"
        android:textColor="@android:color/background_light"
        android:textSize="14sp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnTres"
        app:layout_constraintVertical_bias="0.454" />

    <Button
        android:id="@+id/btnMas"
        android:layout_width="73dp"
        android:layout_height="27dp"
        android:layout_marginBottom="396dp"
        android:background="@drawable/rectangle_9"
        android:text="@string/btnMas"
        android:textColor="@android:color/background_light"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.624"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/btnMenos"
        android:layout_width="73dp"
        android:layout_height="27dp"
        android:layout_marginBottom="396dp"
        android:background="@drawable/rectangle_9"
        android:text="@string/btnMenos"
        android:textColor="@android:color/background_light"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.408"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/btnArrow"
        android:layout_width="46dp"
        android:layout_height="33dp"
        android:background="@drawable/flecha"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.955" />

</androidx.constraintlayout.widget.ConstraintLayout>

