<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OperacionesActivity">

    <LinearLayout
        android:id="@+id/linearlayoutUno"
        android:layout_width="339dp"
        android:layout_height="270dp"
        android:layout_margin="20dp"
        android:layout_marginTop="28dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.002">

        <TextView
            android:id="@+id/txtUno"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:fontFamily="sans-serif-condensed-light"
            android:gravity="center_horizontal"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:text="@string/txtUno"
            android:textColor="@color/gris"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed-light"
            android:gravity="center_horizontal"
            android:paddingBottom="40dp"
            android:text="@string/txtDos"
            android:textColor="@color/gris"
            android:textSize="27dp"
            android:visibility="visible" />

        <GridLayout
            android:id="@+id/gridLayout"
            android:layout_width="279dp"
            android:layout_height="118dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="16dp"
            android:alignmentMode="alignBounds"
            android:background="@drawable/rect2"
            android:columnCount="4"
            android:columnOrderPreserved="false"
            android:paddingLeft="40dp"
            android:paddingTop="30dp">

            <TextView
                android:id="@+id/txt1"
                android:layout_width="45dp"
                android:layout_height="wrap_content"
                android:layout_row="0"
                android:layout_column="0"
                android:ems="10"
                android:enabled="false"
                android:gravity="center_horizontal"
                android:inputType="number"
                android:textSize="15dp"
                android:visibility="invisible" />

            <TextView
                android:id="@+id/txt2"
                android:layout_width="45dp"
                android:layout_height="wrap_content"
                android:layout_row="0"
                android:layout_column="1"
                android:ems="10"
                android:enabled="false"
                android:gravity="center_horizontal"
                android:inputType="number"
                android:textSize="15dp"
                android:visibility="invisible" />

            <TextView
                android:id="@+id/txt3"
                android:layout_width="45dp"
                android:layout_height="wrap_content"
                android:layout_row="0"
                android:layout_column="2"
                android:ems="10"
                android:enabled="false"
                android:gravity="center_horizontal"
                android:inputType="number"
                android:textSize="15dp"
                android:visibility="invisible" />

            <TextView
                android:id="@+id/txt6"
                android:layout_width="45dp"
                android:layout_height="wrap_content"
                android:layout_row="1"
                android:layout_column="0"
                android:ems="10"
                android:enabled="false"
                android:gravity="center_horizontal"
                android:inputType="number"
                android:textSize="15dp"
                android:visibility="invisible" />

            <TextView
                android:id="@+id/txt7"
                android:layout_width="45dp"
                android:layout_height="wrap_content"
                android:layout_row="1"
                android:layout_column="1"
                android:ems="10"
                android:enabled="false"
                android:gravity="center_horizontal"
                android:inputType="number"
                android:textSize="15dp"
                android:visibility="invisible" />

            <TextView
                android:id="@+id/txt8"
                android:layout_width="45dp"
                android:layout_height="wrap_content"
                android:layout_row="1"
                android:layout_column="2"
                android:ems="10"
                android:enabled="false"
                android:gravity="center_horizontal"
                android:inputType="number"
                android:textSize="15dp"
                android:visibility="invisible" />

            <TextView
                android:id="@+id/txt11"
                android:layout_width="45dp"
                android:layout_height="wrap_content"
                android:layout_row="2"
                android:layout_column="0"
                android:ems="10"
                android:enabled="false"
                android:gravity="center_horizontal"
                android:inputType="number"
                android:textSize="15dp"
                android:visibility="invisible" />

            <TextView
                android:id="@+id/txt12"
                android:layout_width="45dp"
                android:layout_height="wrap_content"
                android:layout_row="2"
                android:layout_column="1"
                android:ems="10"
                android:enabled="false"
                android:gravity="center_horizontal"
                android:inputType="number"
                android:textSize="15dp"
                android:visibility="invisible" />

            <TextView
                android:id="@+id/txt13"
                android:layout_width="45dp"
                android:layout_height="wrap_content"
                android:layout_row="2"
                android:layout_column="2"
                android:ems="10"
                android:enabled="false"
                android:gravity="center_horizontal"
                android:inputType="number"
                android:textSize="15dp"
                android:visibility="invisible" />

            <TextView
                android:id="@+id/txtA"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="0"
                android:layout_column="3"
                android:textColor="@color/gris"
                android:textSize="15dp" />

            <TextView
                android:id="@+id/txtC"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="2"
                android:layout_column="3"
                android:textColor="@color/gris"
                android:textSize="15dp" />

            <TextView
                android:id="@+id/txtB"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="1"
                android:layout_column="3"
                android:textColor="@color/gris"
                android:textSize="15dp" />
        </GridLayout>

    </LinearLayout>

    <Button
        android:id="@+id/btnVolver"
        android:layout_width="300dp"
        android:layout_height="63dp"
        android:background="@drawable/volver"
        android:fontFamily="sans-serif-condensed-light"
        android:text="Regresar"
        android:textColor="@android:color/background_light"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.938" />

    <Button
        android:id="@+id/btnPasos"
        android:layout_width="200dp"
        android:layout_height="45dp"
        android:background="@drawable/repeat_grid_1"
        android:fontFamily="sans-serif-condensed-light"
        android:text="@string/pasos"
        android:textColor="@android:color/background_light"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearlayoutUno"
        app:layout_constraintVertical_bias="0.662" />

    <TextView
        android:id="@+id/txtPy"
        android:layout_width="279dp"
        android:layout_height="103dp"
        android:fontFamily="@font/lato_bold_italic"
        android:gravity="center"
        android:inputType="textMultiLine"
        android:textColor="@color/gris"
        android:textSize="18sp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearlayoutUno"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/txtResultado2"
        android:layout_width="95dp"
        android:layout_height="32dp"
        android:fontFamily="sans-serif-light"
        android:gravity="center_horizontal"
        android:text="@string/porque"
        android:textColor="@color/ic_launcher_background"
        android:textSize="18sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtResultado"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/txtResultado"
        android:layout_width="281dp"
        android:layout_height="69dp"
        android:fontFamily="sans-serif-light"
        android:gravity="center_horizontal"
        android:text="ejemplo"
        android:textColor="@color/gris"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtPy"
        app:layout_constraintVertical_bias="0.078" />

    <TextView
        android:id="@+id/txtResultado3"
        android:layout_width="283dp"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-light"
        android:gravity="center_horizontal"
        android:inputType="textMultiLine"
        android:text="ejemplo"
        android:textColor="@color/gris"
        android:textSize="18sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.468"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtResultado2"
        app:layout_constraintVertical_bias="0.0" />


</androidx.constraintlayout.widget.ConstraintLayout>



